<resources>
    <string name="app_name">ATLPay</string>
    <string name="title_action_reset">Reset</string>
    <string name="label_card_number">XXXX XXXX XXXX XXXX</string>
    <string name="label_expired_date">MM/YY</string>
    <string name="label_card_holder">CARD HOLDER</string>
    <string name="label_cvv_code">CVV CODE</string>
    <string name="hint_card_number">16-DIGIT CARD NUMBER</string>
    <string name="hint_expired_date">EXPIRED DATE</string>
    <string name="hint_card_holder">CARD HOLDER</string>
    <string name="hint_cvv_code">CVV CODE</string>
    <string name="label_secure_submission">Secure Submission</string>
    <string name="purchase">Purchase</string>
    <string name="valid">Form is valid</string>
    <string name="invalid">Form is invalid</string>
    <string name="light_theme_form">Light Theme</string>
    <string name="dark_theme_form">Dark Theme</string>
    <string name="scan_with_card_io">Scan with card.io</string>
    <string name="bt_form_hint_card_number">Card Number</string>
    <string name="bt_form_hint_expiration">Expiration Date</string>
    <string name="bt_form_hint_cvv">@string/bt_cvv</string>
    <string name="bt_form_hint_postal_code">Postal Code</string>
    <string name="bt_form_hint_country_code">Country Code</string>
    <string name="bt_form_hint_mobile_number">Mobile Number</string>

    <string name="bt_cvv">CVV</string>
    <string name="bt_cvc">CVC</string>
    <string name="bt_cid">CID</string>
    <string name="bt_cvn">CVN</string>

    <string name="bt_month">Month</string>
    <string name="bt_year">Year</string>

    <string name="bt_card_number_required">Card number is required</string>
    <string name="bt_card_number_invalid">Card number is invalid</string>
    <string name="bt_cvv_required">%s is required</string>
    <string name="bt_cvv_invalid">%s is invalid</string>
    <string name="bt_expiration_required">Expiration date is required</string>
    <string name="bt_expiration_invalid">Expiration date is invalid</string>
    <string name="bt_postal_code_required">Postal code is required</string>
    <string name="bt_postal_nameoncard_required">Name on Card is required</string>
    <string name="bt_country_code_required">Country code is required</string>
    <string name="bt_mobile_number_required">Mobile number is required</string>

    <string name="please_wait">Please wait...</string>
</resources>
