<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:android="http://schemas.android.com/apk/res/android"
       xmlns:tools="http://schemas.android.com/tools"
       android:layout_width="match_parent"
       android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/imageLayout"
        style="@style/bt_field_container">

        <ImageView
            style="@style/bt_card_form_icon"
            tools:ignore="ContentDescription"
            android:visibility="gone"
            android:id="@+id/bt_card_form_card_number_icon"/>

        <android.support.design.widget.TextInputLayout
            style="@style/bt_text_input_layout"
            tools:ignore="RtlCompat"
            android:layout_marginRight="14dp"
            android:layout_marginLeft="0dp"
            android:paddingEnd="0dp"

            android:labelFor="@+id/bt_card_form_card_number">

            <com.atlpay.android.view.CardEditText
                style="@style/bt_card_form_field"
                android:id="@+id/bt_card_form_card_number"
                android:hint="@string/bt_form_hint_card_number"
                android:contentDescription="@string/bt_form_hint_card_number"
                android:inputType="number"/>

        </android.support.design.widget.TextInputLayout>

    </LinearLayout>

    <LinearLayout
        style="@style/bt_field_container"
        tools:ignore="RtlCompat"
        android:weightSum="2"
        android:paddingEnd="0dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp">

        <android.support.design.widget.TextInputLayout
            style="@style/bt_text_input_layout"
            android:layout_width="match_parent"
            android:layout_weight="1"
            android:labelFor="@+id/bt_card_form_expiration">

            <com.atlpay.android.view.ExpirationDateEditText
                style="@style/bt_card_form_field"
                android:id="@+id/bt_card_form_expiration"
                android:hint="@string/bt_form_hint_expiration"
                android:contentDescription="@string/bt_form_hint_expiration"/>

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            style="@style/bt_text_input_layout"
            android:layout_width="match_parent"
            android:layout_weight="1"
            android:labelFor="@+id/bt_card_form_cvv">

            <com.atlpay.android.view.CvvEditText
                style="@style/bt_card_form_field"
                android:id="@+id/bt_card_form_cvv"
                android:hint="@string/bt_form_hint_cvv"
                android:contentDescription="@string/bt_form_hint_cvv"/>

        </android.support.design.widget.TextInputLayout>

    </LinearLayout>

    <LinearLayout
        style="@style/bt_field_container">

        <android.support.design.widget.TextInputLayout
            style="@style/bt_text_input_layout"
            tools:ignore="RtlCompat"
            android:paddingEnd="0dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:labelFor="@+id/bt_card_form_nameoncard">

            <com.atlpay.android.view.NameOnCardEditText
                style="@style/bt_card_form_field"
                android:id="@+id/bt_card_form_nameoncard"
                android:hint="Name on Card"
                android:contentDescription="Enter Name on Card"/>

        </android.support.design.widget.TextInputLayout>

    </LinearLayout>

    <LinearLayout
        style="@style/bt_field_container"
        android:weightSum="2">

        <ImageView
            style="@style/bt_card_form_icon"
            tools:ignore="ContentDescription"
            android:id="@+id/bt_card_form_postal_code_icon"/>

        <android.support.design.widget.TextInputLayout
            style="@style/bt_text_input_layout"
            tools:ignore="RtlCompat"
            android:paddingEnd="0dp"
            android:labelFor="@+id/bt_card_form_postal_code">

            <com.atlpay.android.view.PostalCodeEditText
                style="@style/bt_card_form_field"
                android:id="@+id/bt_card_form_postal_code"
                android:hint="@string/bt_form_hint_postal_code"
                android:contentDescription="@string/bt_form_hint_postal_code"/>

        </android.support.design.widget.TextInputLayout>

    </LinearLayout>

    <LinearLayout
        style="@style/bt_field_container"
        android:weightSum="5">

        <ImageView
            style="@style/bt_card_form_icon"
            tools:ignore="ContentDescription"
            android:id="@+id/bt_card_form_mobile_number_icon"/>

        <android.support.design.widget.TextInputLayout
            style="@style/bt_text_input_layout"
            tools:ignore="RtlCompat"
            android:layout_width="0dp"
            android:layout_weight="2"
            android:paddingEnd="0dp"
            android:labelFor="@+id/bt_card_form_country_code">

            <com.atlpay.android.view.CountryCodeEditText
                style="@style/bt_card_form_field"
                android:id="@+id/bt_card_form_country_code"
                android:hint="@string/bt_form_hint_country_code"
                android:contentDescription="@string/bt_form_hint_country_code"/>

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            style="@style/bt_text_input_layout"
            android:layout_width="0dp"
            android:layout_weight="3"
            android:labelFor="@+id/bt_card_form_mobile_number">

            <com.atlpay.android.view.MobileNumberEditText
                style="@style/bt_card_form_field"
                android:id="@+id/bt_card_form_mobile_number"
                android:hint="@string/bt_form_hint_mobile_number"
                android:contentDescription="@string/bt_form_hint_mobile_number"/>

        </android.support.design.widget.TextInputLayout>

    </LinearLayout>

    <TextView
        tools:ignore="RtlCompat"
        android:id="@+id/bt_card_form_mobile_number_explanation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="-8dp"
        android:visibility="gone"
        android:paddingLeft="@dimen/bt_mobile_number_explanation_padding"
        android:paddingStart="@dimen/bt_mobile_number_explanation_padding"
        android:paddingEnd="0dp"/>

</merge>
